fix: card alignment

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -261,8 +261,8 @@ hr {
   gap: 2rem;
 
   .thumb-box {
-    width: 18rem;
-    height: 18rem;
+    width: 16rem;
+    height: 16rem;
     background: $color-thumb-box;
 
     position: relative;
@@ -320,6 +320,7 @@ hr {
   .links {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-end;
 
     .link {
       padding: 0.35rem;
@@ -340,8 +341,8 @@ hr {
 
 @media (min-width: $mobile-responsive-breakpoint) {
   .card {
-    width: 40rem;
-    grid-template-columns: 18rem auto;
+    width: 35rem;
+    grid-template-columns: 16rem auto;
   }
 }
 
@@ -351,7 +352,7 @@ hr {
     grid-template-rows: 16rem auto;
 
     .thumb-box {
-      width: auto;
+      min-width: 95vw;
     }
   }
 }
